--- a/not-App/Base.lproj/Main.storyboard
+++ b/not-App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TWW-1E-pad">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a9o-yq-DUr">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
@@ -8,13 +8,45 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Splash View Controller-->
+        <scene sceneID="sCw-cH-7PD">
+            <objects>
+                <viewController id="a9o-yq-DUr" customClass="SplashViewController" customModule="not_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="K4C-bS-TqP">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchScreenImage" translatesAutoresizingMaskIntoConstraints="NO" id="OEd-jw-trZ">
+                                <rect key="frame" x="76" y="220" width="240" height="231"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFt-gR-n6O">
+                                <rect key="frame" x="76" y="477" width="226" height="58"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="50"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="75a-l0-pOx"/>
+                        <color key="backgroundColor" systemColor="systemCyanColor"/>
+                    </view>
+                    <connections>
+                        <segue destination="TWW-1E-pad" kind="show" identifier="SplashToLogin" id="ZHg-Rb-x9e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1ki-FF-FQT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-993.12977099236639" y="181.69014084507043"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="HRk-ds-Avv">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TWW-1E-pad" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="TWW-1E-pad" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="BXQ-Sq-FFT"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vxg-Yi-EgJ">
-                        <rect key="frame" x="0.0" y="118" width="393" height="44"/>
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -49,7 +81,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="furkan@1.com" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ROU-Hl-tNv">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ROU-Hl-tNv">
                                         <rect key="frame" x="0.0" y="105.66666666666666" width="361" height="33"/>
                                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -61,7 +93,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mO2-hP-T2s">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mO2-hP-T2s">
                                         <rect key="frame" x="0.0" y="211.33333333333331" width="361" height="33"/>
                                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -92,6 +124,10 @@
                                     <constraint firstAttribute="height" constant="350" id="s0D-UC-r4P"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="9Wt-56-YtB">
+                                <rect key="frame" x="178" y="458" width="37" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -104,6 +140,7 @@
                     <navigationItem key="navigationItem" id="XVo-4Y-XT5"/>
                     <connections>
                         <outlet property="emailTextField" destination="ROU-Hl-tNv" id="ayD-uf-LVz"/>
+                        <outlet property="loadingIcon" destination="9Wt-56-YtB" id="XdZ-vW-cNq"/>
                         <outlet property="loginButtonOutlet" destination="Lb8-7b-P7E" id="kN5-kO-O7l"/>
                         <outlet property="passwordTextField" destination="mO2-hP-T2s" id="ZMl-w6-raL"/>
                         <segue destination="1uS-ne-xeO" kind="show" identifier="LoginToRegister" id="VP4-bq-Z4L"/>
@@ -161,18 +198,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MOj-nu-ghc">
-                        <rightBarButtonItems>
-                            <barButtonItem title="Çıkış" id="Lq3-a7-WOT">
-                                <connections>
-                                    <action selector="logOutButton:" destination="OR2-2L-pkx" id="4D6-v1-75P"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="+" id="3uE-sH-9ny">
-                                <connections>
-                                    <action selector="goToNewNotPageButton:" destination="OR2-2L-pkx" id="EAb-7w-f10"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" title="Çıkış" id="Lq3-a7-WOT">
+                            <connections>
+                                <action selector="logOutButton:" destination="OR2-2L-pkx" id="4D6-v1-75P"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="notesTableView" destination="mw6-Da-1Fh" id="dUk-IK-xuh"/>
@@ -187,9 +217,9 @@
         <!--New Not View Controller-->
         <scene sceneID="nh6-QA-tc5">
             <objects>
-                <viewController id="aDJ-eT-wat" customClass="NewNotViewController" customModule="not_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="aDJ-eT-wat" customClass="NewNotViewController" customModule="not_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hfL-Lr-3UE">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8HG-SN-Mce">
@@ -235,6 +265,10 @@
                                     <constraint firstAttribute="height" constant="350" id="gtj-sb-QFG"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="sBA-kz-mca">
+                                <rect key="frame" x="178" y="141" width="37" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="dT8-Au-dUv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -247,19 +281,20 @@
                     <navigationItem key="navigationItem" id="wlx-RA-qvf"/>
                     <connections>
                         <outlet property="contentTextView" destination="Fbg-EW-Q2B" id="YPB-bP-Pca"/>
+                        <outlet property="loadingIcon" destination="sBA-kz-mca" id="29K-ey-UVj"/>
                         <outlet property="titleTextField" destination="3yw-s4-vTK" id="emw-fk-kU9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htf-WE-U6s" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3898" y="67"/>
+            <point key="canvasLocation" x="3896.9465648854962" y="66.901408450704224"/>
         </scene>
         <!--Edit View Controller-->
         <scene sceneID="ynj-5j-ZrI">
             <objects>
-                <viewController id="55j-f2-yvA" customClass="EditViewController" customModule="not_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="55j-f2-yvA" customClass="EditViewController" customModule="not_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="juC-4s-oHo">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0uH-kQ-ok5">
@@ -315,6 +350,10 @@
                                     <constraint firstAttribute="height" constant="350" id="u8E-mA-Q4J"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="hgT-v0-8WN">
+                                <rect key="frame" x="159" y="162" width="37" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8v6-WW-YQX"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -327,6 +366,7 @@
                     <navigationItem key="navigationItem" id="bFx-Ta-4dN"/>
                     <connections>
                         <outlet property="contentTextView" destination="DRw-gN-QGD" id="FSO-7u-exF"/>
+                        <outlet property="loadingIcon" destination="hgT-v0-8WN" id="VYo-O9-Yrg"/>
                         <outlet property="titleTextField" destination="Aap-aF-3rA" id="I46-sc-I7w"/>
                     </connections>
                 </viewController>
@@ -400,6 +440,10 @@
                                     <constraint firstAttribute="height" constant="350" id="3U4-1n-RXR"/>
                                 </constraints>
                             </stackView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="Zwm-wx-Xq7">
+                                <rect key="frame" x="178" y="458" width="37" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="rQj-dg-kg6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -412,6 +456,7 @@
                     <navigationItem key="navigationItem" id="xEV-I1-jw8"/>
                     <connections>
                         <outlet property="emailTextField" destination="kHE-7V-8nd" id="gBc-ph-qHW"/>
+                        <outlet property="loadingIcon" destination="Zwm-wx-Xq7" id="iJd-UY-ThV"/>
                         <outlet property="passwordTextField" destination="dis-vB-Eas" id="Rma-6v-XJc"/>
                         <outlet property="registerButtonOutlet" destination="Qmb-Mn-4AL" id="eTU-K3-JlY"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="RegisterToLogin" id="joR-qe-1z9"/>
@@ -420,20 +465,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sVN-ga-Xc1" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1033" y="-348"/>
+            <point key="canvasLocation" x="1032.824427480916" y="-348.59154929577466"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="VP4-bq-Z4L"/>
         <segue reference="CBj-WM-Mai"/>
         <segue reference="joR-qe-1z9"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="launchScreenImage" width="341.33334350585938" height="341.33334350585938"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemCyanColor">
+            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
